# ChangeLog for sci-mathematics/octave
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sci-mathematics/cvs-repo/gentoo-x86/sci-mathematics/octave/ChangeLog,v 1.43 2006/11/13 13:42:06 fmccor Exp $

  13 Nov 2006; Ferris McCormick <fmccor@gentoo.org> octave-2.1.73-r1.ebuild:
  Stable on sparc --- Bug #141446 --- I am bypassing 2.1.73 for 2.1.73-r1
  because FEATURES=test succeeds with 2.1.73-r1 but a test is broken with
  2.1.73, and given the choice, for a package to be stable, FEATURES=test needs
  to work.

  13 Nov 2006; Luis Medinas <metalgod@gentoo.org> octave-2.1.73.ebuild:
  Stable on amd64. Bug #141446.

  03 Nov 2006; Markus Dittrich <markusle@gentoo.org> ChangeLog:
  Fixed test case that failed inside the sandbox and added dejagnu
  as dependency which is needed for src_test. This fixes bug #140808.

*octave-2.1.73-r1 (02 Nov 2006)

  02 Nov 2006; Markus Dittrich <markusle@gentoo.org>
  +files/octave-2.1.73-f2c-fix.patch, +octave-2.1.73-r1.ebuild:
  New revision allows f2c to be used as fortran compiler. This
  fixes bug #152727.

  04 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org> octave-2.1.73.ebuild:
  Stable on x86 wrt bug #141446.

  30 Sep 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
  octave-2.1.73.ebuild:
  stable on ppc (Bug #141446)

  15 Sep 2006; Markus Rothe <corsair@gentoo.org> octave-2.1.73.ebuild:
  Stable on ppc64; bug #141446

  11 Aug 2006; Markus Rothe <corsair@gentoo.org> octave-2.1.72.ebuild:
  Stable on ppc64; bug #141446

  05 Aug 2006; Michael Hanselmann <hansmi@gentoo.org> octave-2.1.72.ebuild:
  Stable on ppc.

  03 Aug 2006; Ferris McCormick <fmccor@gentoo.org> octave-2.1.72.ebuild:
  Sparc stable --- Bug #141446 --- builds and passes all tests (but note running
  tests requires dejagnu).

  27 Jul 2006; Joshua Jackson <tsunam@gentoo.org> octave-2.1.72.ebuild:
  Stable x86; bug #141446

*octave-2.1.73 (09 Jun 2006)
