@@ -39,14 +39,18 @@ EBUILD octave-2.1.73-r1.ebuild 4036 RMD160 f119ef4a6da309f75168f91589af28560d1bc
 MD5 81f89fbae4ca6f13cfa48522bc6383f5 octave-2.1.73-r1.ebuild 4036
 RMD160 f119ef4a6da309f75168f91589af28560d1bc1b2 octave-2.1.73-r1.ebuild 4036
 SHA256 bf778f3f0af55e304999a5e1dbff0f051554c44fe6f40cbfddfd42111f9cd0bf octave-2.1.73-r1.ebuild 4036
+EBUILD octave-2.1.73-r2.ebuild 4140 RMD160 ed07375bf5c1fd27c63e4fec5d9e748e2d86d687 SHA1 280d091f926e3ea976a3007b048e8730d1da2385 SHA256 de6aeca9898bc12489ef5d47ae0b7ec307c08b6b86ed76994a065492d8c99b86
+MD5 1c47a5767888b9a053e6e5e638fbf93b octave-2.1.73-r2.ebuild 4140
+RMD160 ed07375bf5c1fd27c63e4fec5d9e748e2d86d687 octave-2.1.73-r2.ebuild 4140
+SHA256 de6aeca9898bc12489ef5d47ae0b7ec307c08b6b86ed76994a065492d8c99b86 octave-2.1.73-r2.ebuild 4140
 EBUILD octave-2.1.73.ebuild 3879 RMD160 63e64c4d07c22372d0b2891a96431e7d4bce65f1 SHA1 fc99da35582332d6f0ebc3eb1d1750ecb8553373 SHA256 38b01d98104be55d60e468869e321db796806fa1cfc695be940af29f91f3722c
 MD5 abefbfaf466e5014729b23ee8c6aa422 octave-2.1.73.ebuild 3879
 RMD160 63e64c4d07c22372d0b2891a96431e7d4bce65f1 octave-2.1.73.ebuild 3879
 SHA256 38b01d98104be55d60e468869e321db796806fa1cfc695be940af29f91f3722c octave-2.1.73.ebuild 3879
-MISC ChangeLog 13612 RMD160 20cd34fc39fdbc815d83df6c4b2466e590df9e51 SHA1 dc89784298b0f7cd740a94aa9fb92f30df6671cb SHA256 8c100c73657ac7a3055eabf3f649771f0a9693d6a77fb1f670d52c854be272e5
-MD5 12d582805b8f13437a81b4d09a505549 ChangeLog 13612
-RMD160 20cd34fc39fdbc815d83df6c4b2466e590df9e51 ChangeLog 13612
-SHA256 8c100c73657ac7a3055eabf3f649771f0a9693d6a77fb1f670d52c854be272e5 ChangeLog 13612
+MISC ChangeLog 13902 RMD160 9b38c7c7aedb2850f3afc045ce9fc5353cbe9aff SHA1 709f73d7937bbcada64e7961d45f33b66663e448 SHA256 75c3b846ce9728e2511a81890b9b3558f668d332c313969536f1075754cb96b1
+MD5 5fa85972a66f58d4d4388e5def8b6fb6 ChangeLog 13902
+RMD160 9b38c7c7aedb2850f3afc045ce9fc5353cbe9aff ChangeLog 13902
+SHA256 75c3b846ce9728e2511a81890b9b3558f668d332c313969536f1075754cb96b1 ChangeLog 13902
 MISC metadata.xml 304 RMD160 9bf8d3764f2f605704497eb920cf7d496ac77fa1 SHA1 f6b8d455b85f4b18b68d152c3e8179b7d6defe60 SHA256 7de312597cc9f943d78b63b27600b43a55cedc90557552f88dc0d73462c2921a
 MD5 235d4f760824f15143cfe730fc1710a8 metadata.xml 304
 RMD160 9bf8d3764f2f605704497eb920cf7d496ac77fa1 metadata.xml 304
@@ -69,3 +73,6 @@ SHA256 f550c0e9363b790830b2eff525d52c4382e65eab89715973c7938df31c65da1f files/di
 MD5 13da45398b2ad0d71c6289ff6a97d651 files/digest-octave-2.1.73-r1 247
 RMD160 f9d3dc093a685264e10f8550380e3882cd20714b files/digest-octave-2.1.73-r1 247
 SHA256 f550c0e9363b790830b2eff525d52c4382e65eab89715973c7938df31c65da1f files/digest-octave-2.1.73-r1 247
+MD5 13da45398b2ad0d71c6289ff6a97d651 files/digest-octave-2.1.73-r2 247
+RMD160 f9d3dc093a685264e10f8550380e3882cd20714b files/digest-octave-2.1.73-r2 247
+SHA256 f550c0e9363b790830b2eff525d52c4382e65eab89715973c7938df31c65da1f files/digest-octave-2.1.73-r2 247
