@@ -1,0 +1,3 @@
+MD5 c356475aa06d81a10f8bf27f1a1d27a0 octave-2.1.73.tar.bz2 5790133
+RMD160 d34c6ecd8f84c728ad7687d9568b9d69ade6f5db octave-2.1.73.tar.bz2 5790133
+SHA256 8ccaee227c6cad3b5633a904414f17ce73de8eab2abd4d2e6a3972dd878ffbc3 octave-2.1.73.tar.bz2 5790133
